# hello-qt-nix

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hello-qt.cpp
cvb_flake/: flake.nix
qt_flake/: flake.nix
qt_ld/: flake.nix
